# rotary-embedding-torch

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  tests.yml
rotary_embedding_torch/: __init__.py  rotary_embedding_torch.py
src/rotary_embedding_torch/: __init__.py  rotary_embedding_torch.py
tests/: __init__.py  test_rope.py
